--- a/package.json
+++ b/package.json
@@ -1,40 +1,44 @@
 {
-  "name": "imagein",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@plaiceholder/next": "^3.0.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@t3-oss/env-nextjs": "^0.10.1",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "geist": "^1.3.1",
-    "lucide-react": "^0.405.0",
-    "next": "14.2.4",
-    "node-fetch": "^3.3.2",
-    "plaiceholder": "^3.0.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "sharp": "^0.33.4",
-    "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7",
-    "unsplash-js": "^7.0.19",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+	"name": "imagein",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@plaiceholder/next": "^3.0.0",
+		"@radix-ui/react-avatar": "^1.1.0",
+		"@radix-ui/react-dropdown-menu": "^2.1.1",
+		"@radix-ui/react-slot": "^1.1.0",
+		"@t3-oss/env-nextjs": "^0.10.1",
+		"@tanstack/react-query": "^5.50.1",
+		"@tanstack/react-query-devtools": "^5.50.1",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
+		"geist": "^1.3.1",
+		"lucide-react": "^0.405.0",
+		"next": "14.2.4",
+		"node-fetch": "^3.3.2",
+		"plaiceholder": "^3.0.0",
+		"react": "^18",
+		"react-dom": "^18",
+		"sharp": "^0.33.4",
+		"tailwind-merge": "^2.4.0",
+		"tailwindcss-animate": "^1.0.7",
+		"unsplash-js": "^7.0.19",
+		"zod": "^3.23.8"
+	},
+	"devDependencies": {
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"eslint": "^8",
+		"eslint-config-next": "14.2.4",
+		"postcss": "^8",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5"
+	}
 }
