--- a/package.json
+++ b/package.json
@@ -6,35 +6,52 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"db:migrate": "drizzle-kit generate",
+		"db:push": "drizzle-kit migrate",
+		"db:drop": "drizzle-kit drop",
+		"db:studio": "drizzle-kit studio"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^3.9.0",
+		"@lucia-auth/adapter-drizzle": "^1.0.7",
+		"@node-rs/argon2": "^1.8.3",
 		"@plaiceholder/next": "^3.0.0",
 		"@radix-ui/react-avatar": "^1.1.0",
 		"@radix-ui/react-dropdown-menu": "^2.1.1",
+		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@t3-oss/env-nextjs": "^0.10.1",
 		"@tanstack/react-query": "^5.50.1",
 		"@tanstack/react-query-devtools": "^5.50.1",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"drizzle-orm": "^0.31.4",
 		"geist": "^1.3.1",
+		"lucia": "^3.2.0",
 		"lucide-react": "^0.405.0",
 		"next": "14.2.4",
+		"next-themes": "^0.3.0",
 		"node-fetch": "^3.3.2",
+		"pg": "^8.12.0",
 		"plaiceholder": "^3.0.0",
 		"react": "^18",
 		"react-dom": "^18",
+		"react-hook-form": "^7.52.1",
 		"sharp": "^0.33.4",
+		"sonner": "^1.5.0",
 		"tailwind-merge": "^2.4.0",
 		"tailwindcss-animate": "^1.0.7",
 		"unsplash-js": "^7.0.19",
-		"zod": "^3.23.8"
+		"zod": "^3.23.8",
+		"zustand": "^4.5.4"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
+		"@types/pg": "^8.11.6",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
+		"drizzle-kit": "^0.22.8",
 		"eslint": "^8",
 		"eslint-config-next": "14.2.4",
 		"postcss": "^8",
