--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
 		"@t3-oss/env-nextjs": "^0.10.1",
 		"@tanstack/react-query": "^5.50.1",
 		"@tanstack/react-query-devtools": "^5.50.1",
+		"@uidotdev/usehooks": "^2.4.1",
+		"arctic": "^1.9.1",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"drizzle-orm": "^0.31.4",
