--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
 		"react": "^18",
 		"react-dom": "^18",
 		"react-hook-form": "^7.52.1",
+		"react-intersection-observer": "^9.13.0",
+		"react-responsive-masonry": "^2.2.1",
 		"sharp": "^0.33.4",
 		"sonner": "^1.5.0",
 		"tailwind-merge": "^2.4.0",
@@ -56,6 +58,7 @@
 		"@types/pg": "^8.11.6",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
+		"@types/react-responsive-masonry": "^2.1.3",
 		"drizzle-kit": "^0.22.8",
 		"eslint": "^8",
 		"eslint-config-next": "14.2.4",
