--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"arctic": "^1.9.1",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"dayjs": "^1.11.11",
 		"drizzle-orm": "^0.31.4",
 		"geist": "^1.3.1",
 		"ky": "^1.4.0",
