--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@radix-ui/react-dropdown-menu": "^2.1.1",
 		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
+		"@studio-freight/react-lenis": "^0.0.47",
 		"@t3-oss/env-nextjs": "^0.10.1",
 		"@tanstack/react-query": "^5.50.1",
 		"@tanstack/react-query-devtools": "^5.50.1",
