--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
 		"lucide-react": "^0.405.0",
 		"next": "14.2.4",
 		"next-themes": "^0.3.0",
-		"node-fetch": "^3.3.2",
+		"node-fetch": "^2.6.1",
 		"pg": "^8.12.0",
 		"plaiceholder": "^3.0.0",
 		"react": "^18",
@@ -57,6 +57,7 @@
 	},
 	"devDependencies": {
 		"@types/node": "^20",
+		"@types/node-fetch": "^2.6.11",
 		"@types/pg": "^8.11.6",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
