--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"db:studio": "drizzle-kit studio"
 	},
 	"dependencies": {
+		"@faker-js/faker": "^8.4.1",
 		"@hookform/resolvers": "^3.9.0",
 		"@lucia-auth/adapter-drizzle": "^1.0.7",
 		"@node-rs/argon2": "^1.8.3",
