--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"next-themes": "^0.3.0",
 		"node-fetch": "^3.3.2",
 		"pg": "^8.12.0",
+		"prop-types": "^15.8.1",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-hook-form": "^7.52.1",
